@@ -2,8 +2,9 @@ python-sqlfuse (0.5.14-1) unstable; urgency=low
 
   * Add separate inode-writeback background job.
   * Adjust directory sizes after commit (retries!)
+  * use NameError for translated remote calls
 
- -- Matthias Urlichs <smurf@smurf.noris.de>  Tue, 12 Apr 2011 21:11:25 +0200
+ -- Matthias Urlichs <smurf@smurf.noris.de>  Tue, 12 Apr 2011 21:28:36 +0200
 
 python-sqlfuse (0.5.13-1) unstable; urgency=low
 
